<resources>
    <string name="app_name">Home Watcher</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_node_name">Node name</string>
    <string name="pref_default_node_name"></string>

    <string name="pref_title_hub_addr">Hub address</string>
    <string name="pref_default_hub_addr">ws://localhost:8080</string>

    <string name="pref_title_colour_threshold">Colour threshold</string>
    <string name="pref_default_colour_threshold">15</string>

    <string name="pref_title_min_percent">Min percent</string>
    <string name="pref_default_min_percent">5</string>

    <string name="pref_title_max_percent">Max percent</string>
    <string name="pref_default_max_percent">40</string>

    <string name="pref_title_sequence">Sequence</string>
    <string name="pref_default_sequence">2</string>

    <string name="pref_title_scale">Scale</string>
    <string name="pref_default_scale">4</string>

    <string name="pref_title_throttleminute">Throttle/minute</string>
    <string name="pref_default_throttleminute">10</string>

    <string name="pref_title_throttlehour">Throttle/hour</string>
    <string name="pref_default_throttlehour">30</string>

    <string name="watcher_service_started">Started watcher</string>
    <string name="watcher_service_stopped">Stopped watcher</string>
    <string name="watcher_service_label">Home Watcher</string>

    <string name="no_camera_permission">Camera permission was not granted</string>

    <string name="test_motion_label">Test motion</string>
</resources>
