<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_node_name"
        android:inputType="text"
        android:key="node_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_node_name" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_hub_addr"
        android:inputType="textUri"
        android:key="hub_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_hub_addr" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_colour_threshold"
        android:inputType="number"
        android:key="colour_threshold"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_colour_threshold" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_min_percent"
        android:inputType="number"
        android:key="min_percent"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_min_percent" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_max_percent"
        android:inputType="number"
        android:key="max_percent"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_max_percent" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_sequence"
        android:inputType="number"
        android:key="sequence"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_sequence" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_scale"
        android:inputType="number"
        android:key="scale"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_scale" />

</PreferenceScreen>
